# Computational-Graphics-THU-2018

./: .gitignore  LICENSE  README.md
hw1/: hw1.Rmd  main.cpp  main.py  计算机图形学_习题课1_本科生2018_500301909.pptx
hw2/: CMakeLists.txt
hw2/lib/: utils.hpp
hw2/pt/: a  main.cpp  utils.hpp
hw2/sppm/: bezier.hpp  bezier_test.py  kdtree.hpp  main.cpp  obj.hpp  ray.hpp  render.hpp  scene.hpp  star.png.bak  template.hpp  test.cpp  texture.hpp  utils.hpp  vec3.hpp
hw3/: 计算机图形学基础_习题课3_529603220.pptx
hw3/MVC/: CMakeLists.txt  edge.py  main.cpp  report.bib  report.tex
reading/parallel/codes/ch3/: mpi_mat_vect_time  mpi_mat_vect_time.c
reading/parallel/codes/ch3/mpi_mat_vect_time.dSYM/Contents/: Info.plist
reading/parallel/codes/ch3/mpi_mat_vect_time.dSYM/Contents/Resources/DWARF/: mpi_mat_vect_time
result/MashPlant/: readme.md
